<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".features.auth.AuthActivity">


    <!--login Label-->
    <ImageView
        android:id="@+id/imageL"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/mainlog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL">

        <EditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/passwordTIL"
        android:layout_below="@id/emailTIL"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Register Button-->

    <Button
        android:id="@+id/login_btn"
        android:text="@string/log_in"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:drawableStart="@drawable/login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- google button-->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recoverPass" >

    </com.google.android.gms.common.SignInButton>


    <TextView
        android:id="@+id/recoverPass"
        android:text="@string/forgot_password"
        android:layout_below="@+id/login_btn"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"/>

    <!--to go to login-->

    <TextView
        android:id="@+id/no_account"
        android:text="@string/not_registered"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"/>

</RelativeLayout>