<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7EDF0"
    android:orientation="vertical"
    tools:context=".features.dashboard.profile.ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editprof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_editbtn"
            android:layout_margin="16dp"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7EDF0"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                        android:id="@+id/avatarp"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="1dp"
                        android:background="@color/colorbg"
                        android:src="@drawable/ic_default_photo" />

                </FrameLayout>

                <TextView
                    android:id="@+id/namep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/collegep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rec"
                    android:drawableStart="@drawable/ic_college"
                    android:hint="@string/college"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/coursep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rec"
                    android:drawableStart="@drawable/ic_course"
                    android:hint="@string/course"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/emailp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rec"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:textColor="#000000"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/aboutp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rec"
                    android:drawableStart="@drawable/ic_about"
                    android:hint="@string/about_you"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/intsub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rec"
                    android:drawableStart="@drawable/ic_subj"
                    android:hint="@string/interest_subjects"
                    android:textColor="#000000"
                    android:textSize="25sp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
